rename table bank

--- a/views/admin/bank/view_bank.ejs
+++ b/views/admin/bank/view_bank.ejs
@@ -24,7 +24,7 @@
           <!-- End Heading -->
         
         <!-- include table -->
-        <%- include('table.ejs') %>
+        <%- include('table_bank.ejs') %>
 
         </div>
         <!-- /.container-fluid -->
