--- a/views/admin/booking/table_booking.ejs
+++ b/views/admin/booking/table_booking.ejs
@@ -9,9 +9,11 @@
                   <thead>
                     <tr>
                       <th>No</th>
-                      <th>Name Bank</th>
-                      <th>Nomor Rekening</th>
-                      <th>Name</th>
+                      <th>Date</th>
+                      <th>Title</th>
+                      <th>Member Name</th>
+                      <th>Bank Name</th>
+                      <th>Status</th>
                       <th>Action</th>
                     </tr>
                   </thead>
