--- a/views/admin/category/view_category.ejs
+++ b/views/admin/category/view_category.ejs
@@ -24,7 +24,7 @@
           <!-- End Heading -->
         
         <!-- include table -->
-        <%- include('table.ejs') %>
+        <%- include('table_category.ejs') %>
 
         </div>
         <!-- /.container-fluid -->
