--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -55,7 +55,7 @@
 
         <!-- Nav Item - Tables -->
         <li class="nav-item">
-          <a class="nav-link" href=".admin/booking">
+          <a class="nav-link" href="/admin/booking">
             <i class="fas fa-fw fa-shopping-cart"></i>
             <span>Booking</span></a>
         </li>
