--- a/views/admin/category/view_category.ejs
+++ b/views/admin/category/view_category.ejs
@@ -65,9 +65,22 @@
     </div>
   </div>
 
+  <%- include('add_modal.ejs') %>
+  <%- include('edit_modal.ejs') %>
   <!-- include script -->
   <%- include('../../partials/scripts.ejs') %>
   
 </body>
 
 </html>
+
+<script>
+  $('#dataTable').on('click', '.button-update', function(){
+    let id = $(this).data('id');
+    let name = $(this).data('name');
+    // console.log(id + name);
+    $('#editModal').modal('show');
+    $('.id').val(id);
+    $('.name').val(name);
+  })
+</script>
