falsh message and dynamic title

--- a/views/admin/category/view_category.ejs
+++ b/views/admin/category/view_category.ejs
@@ -15,9 +15,11 @@
 
         <!-- include navbar -->
         <%- include('../../partials/navbar.ejs') %>
-
+        
         <!-- Begin Page Content -->
         <div class="container-fluid">
+          <!-- include flash message -->
+          <%- include('../../partials/message.ejs') %>
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">Category</h1>
