create master data bank

--- a/views/admin/bank/view_bank.ejs
+++ b/views/admin/bank/view_bank.ejs
@@ -65,6 +65,7 @@
     </div>
   </div>
 
+  <%- include('add_modal.ejs') %>
   <!-- include script -->
   <%- include('../../partials/scripts.ejs') %>
   
