--- a/views/admin/bank/view_bank.ejs
+++ b/views/admin/bank/view_bank.ejs
@@ -18,6 +18,8 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
+          <!-- include flash message -->
+          <%- include('../../partials/message.ejs') %>
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">Bank</h1>
