--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -15,3 +15,4 @@
 
   <!-- Page level custom scripts -->
   <script src="/sb-admin-2/js/demo/datatables-demo.js"></script>
+  <script src="https://cdn.ckeditor.com/4.18.0/standard/ckeditor.js"></script>
